# Flask_Micro_Blog

./: README.md  pyproject.toml
app/: __init__.py  app.db  config.py  email.py  forms.py  models.py  routes.py
app/templates/: _post.html  base.html  user.html
app/templates/email/: reset_password.txt
migrations/versions/: 73b62d3f1f8b_followers.py  7b38cf258819_posts_table.py  8710fe261266_user_about_me_and_last_seen.py  ddafa271b534_users_table.py
tests/: test_followers.py  test_routes.py  test_user_model.py
