[tool.poetry]
name = "cat"
version = "0.1.0"
description = ""
authors = ["Oliver Masters <contact@olivermasters.co.uk>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "^2.3.2"
python-dotenv = "^1.0.0"
flask-wtf = "^1.1.1"
flask-sqlalchemy = "^3.0.3"
flask-migrate = "^4.0.4"
flask-login = "^0.6.2"
email-validator = "^2.0.0.post2"
flask-mail = "^0.9.1"
pyjwt = "^2.7.0"
flask-bootstrap = "^3.3.7.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
flask = "flask run --host 0.0.0.0"
